@@ -77,21 +77,21 @@ public class DbColNumber extends DbColumn
   // declare/define something only in the code
   // please fill in/modify the following section
   // -beg- preserve=yes 405066900171 detail_end "DbColNumber"
-  Integer minValue=null;
-  Integer maxValue=null;
-  public Integer getMinValue() {
+  Long minValue=null;
+  Long maxValue=null;
+  public Long getMinValue() {
 		return minValue;
 	}
 
-	public void setMinValue(Integer minValue) {
+	public void setMinValue(Long minValue) {
 		this.minValue = minValue;
 	}
 
-	public Integer getMaxValue() {
+	public Long getMaxValue() {
 		return maxValue;
 	}
 
-	public void setMaxValue(Integer maxValue) {
+	public void setMaxValue(Long maxValue) {
 		this.maxValue = maxValue;
 	}
   // -end- 405066900171 detail_end "DbColNumber"
